Next Release

  Features

  - Add startup process docs.

  Bug Fixes

  - Move core repoze.bfg ZCML into a ``repoze.bfg.includes`` package so we can 
    use repoze.bfg better as a namespace package.  Adjust the code generator to
    use it.  We've left around the older configure.zcml in the repoze.bfg
    package directly so as not to break older apps.

  - When a zcml application registry cache was unpickled, and it
    contained a reference to an object that no longer existed (such as
    a view), bfg would not start properly.

0.3.5 (09/01/2008)

  Features

  - Event notification is issued after application is created and
    configured (``IWSGIApplicationCreatedEvent``).

  - New API module: ``repoze.bfg.view``.  This module contains the
    functions named ``render_view_to_response``,
    ``render_view_to_iterable``, ``render_view`` and ``is_response``,
    which are documented in the API docs.  These features aid
    programmatic (non-server-driven) view execution.

0.3.4 (08/28/2008)

  Backwards incompatibilities

  - Make ``repoze.bfg`` a namespace package so we can allow folks to
    create subpackages (e.g. ``repoze.bfg.otherthing``) within
    separate eggs.  This is a backwards incompatible change which
    makes it impossible to import "make_app" and "get_options" from
    the ``repoze.bfg`` module directly.  This change will break all
    existing apps generated by the paster code generator.  Instead,
    you need to import these functions as
    ``repoze.bfg.router:make_app`` and
    ``repoze.bfg.registry:get_options``, respectively.  Sorry folks,
    it has to be done now or never, and definitely better now.

  Features

  - Add ``model_path`` API function to traversal module.

  Bugfixes

  - Normalize path returned by repoze.bfg.caller_path.

0.3.3 (8/23/2008)

  - Fix generated test.py module to use project name rather than package
    name.

0.3.2 (8/23/2008)

  - Remove ``sampleapp`` sample application from bfg package itself.
